--- a/BC.Common/workspace/projects/bc-client/src/index.html
+++ b/BC.Common/workspace/projects/bc-client/src/index.html
@@ -5,8 +5,9 @@
   <title>Ionic App</title>
   <base href="/"/>
   <meta content="light dark" name="color-scheme"/>
-  <meta content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        name="viewport"/>
+  <meta
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    name="viewport"/>
   <meta content="telephone=no" name="format-detection"/>
   <meta content="no" name="msapplication-tap-highlight"/>
   <link href="assets/icon/favicon.png" rel="icon" type="image/png"/>
@@ -15,5 +16,6 @@
 </head>
 <body>
 <app-root></app-root>
+<script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js" type="text/javascript"></script>
 </body>
 </html>
